# natural-language-shell

./: .gitignore  README.md
backend/: Installation.txt  shellApi.cpp  test.cpp
backend/cpp-httplib-master/: httplib.h
frontend/: README.md
frontend/natural_language_shell/: README.md  pubspec.yaml
frontend/natural_language_shell/android/app/: build.gradle
frontend/natural_language_shell/cppCode/api/: CMakeCache.txt  CMakeLists.txt  Makefile  api  api.cpp  cmake_install.cmake
frontend/natural_language_shell/cppCode/shellApi/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  shellScriptRunner.cpp
frontend/natural_language_shell/installer/: config.json
frontend/natural_language_shell/ios/Runner/: Info.plist
frontend/natural_language_shell/ios/Runner.xcodeproj/: project.pbxproj
frontend/natural_language_shell/lib/: main.dart
frontend/natural_language_shell/lib/src/: app.dart
frontend/natural_language_shell/lib/src/footer/: footer_element.dart
frontend/natural_language_shell/lib/src/history/: history_view.dart  output_struct.dart
frontend/natural_language_shell/linux/: CMakeLists.txt  my_application.cc
frontend/natural_language_shell/macos/: shellScriptRunner.cpp
frontend/natural_language_shell/macos/Runner/: DebugProfile.entitlements
frontend/natural_language_shell/macos/Runner.xcodeproj/: project.pbxproj
frontend/natural_language_shell/web/: index.html  manifest.json
frontend/natural_language_shell/windows/: CMakeLists.txt
frontend/natural_language_shell/windows/runner/: Runner.rc  main.cpp
(+18 files in other folders)
